feat(接口测试): 接口用例报告接口